review the code and add some awesome function

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,24 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.zsj.smile" >
+    package="me.zsj.smile">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name="me.zsj.smile.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_smile"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/meizhi_and_smile_title"
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".ui.MainActivity"
+            android:label="@string/meizhi_and_smile_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.MeizhiAndSmileActivity"
+            android:label="@string/meizhi_and_smile_title"
+            android:theme="@style/AppTheme.Activity">
+
+        </activity>
+
+        <activity
+            android:name=".ui.MeizhiListActivity"
+            android:label="Meizhi"
+            android:theme="@style/AppTheme.Activity">
+
+        </activity>
+
+        <activity android:name=".ui.MeizhiActivity">
+        </activity>
+
+        <activity android:name=".ui.AboutActivity">
+
         </activity>
     </application>
 
