--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
     }
     buildTypes {
         release {
@@ -31,10 +31,12 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'io.reactivex:rxandroid:1.0.0'
 
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.daimajia.numberprogressbar:library:1.2@aar'
 
     compile files('libs/jsoup-1.7.2.jar')
     compile files('libs/litepal-1.2.0-src.jar')
