--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
 
         <activity
             android:name=".ui.MeizhiAndSmileActivity"
-            android:label="MeizhiAndSmile"
+            android:label=""
             android:theme="@style/AppTheme.Activity">
 
         </activity>
