--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
             android:label="@string/smile_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -42,8 +41,7 @@
         <activity android:name=".ui.AboutActivity">
         </activity>
 
-        <activity android:name=".ui.VedioActivity"
-            >
+        <activity android:name=".ui.VedioActivity">
         </activity>
 
         <activity android:name=".ui.LoveCollectActivity"
@@ -51,14 +49,6 @@
             >
         </activity>
 
-        <!--<activity android:name=".ui.OriginalityVideoActivity"
-            android:label="@string/activity_originalityVideo_title">
-        </activity>
-
-        <activity android:name=".ui.PlayerActivity"
-            android:label="@string/activity_originalityVideo_title"
-            android:configChanges="orientation|screenSize">
-        </activity>-->
     </application>
 
 </manifest>
